--- a/.gitconfig
+++ b/.gitconfig
@@ -4,20 +4,20 @@
     co = checkout
     cm = commit -m
     ca = commit -a
-    cam = commit -am
+    ci = commit -am
     am = commit --amend
+    p = push
+    pu = push -u
     l = log --graph --pretty='%C(yellow)%h%Cblue %an%C(magenta)%d%Creset %s'
 [user]
 	name = Marin Usalj
 	email = mneorr@gmail.com
-
 [core]
     excludesfile = /Users/mneorr/.gitignore_global
-    quotepath = false
-
+	quotepath = false
 [color]
     branch = auto
-	diff = auto
+    diff = auto
     status = auto
 
 
