added some aliases and vim stuff

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,18 @@
 [alias]
-  s = status
   a = add .
+  acm = !git add . && git commit -am
+  b = branch
+  bd = branch -d
   co = checkout
+  conflicts = !git ls-files -u | cut -f 2 | sort -u
   cm = commit -m
   ca = commit -a
   ci = commit -am
   cam = commit --amend
-  acm = !git add . && git commit -am
+  l = log --graph --pretty='%C(yellow)%h (%cr) %Cblue %an%C(magenta)%d%Creset %s'
   p = push
   pu = push -u
-  l = log --graph --pretty='%C(yellow)%h (%cr) %Cblue %an%C(magenta)%d%Creset %s'
+  s = status
   us = submodule update --recursive
 [user]
 	name = Marin Usalj
