--- a/.gitconfig
+++ b/.gitconfig
@@ -12,23 +12,18 @@
   l = log --graph --pretty='%C(yellow)%h (%cr) %Cblue %an%C(magenta)%d%Creset %s'
   p = push
   pu = push -u
+  riu = rebase -i @{u}
   s = status
   us = submodule update --recursive
 [user]
-	name = Marin Usalj
-	email = mneorr@gmail.com
+  name = Marin Usalj
+  email = mneorr@gmail.com
 [core]
   excludesfile = /Users/mneorr/.gitignore_global
-	quotepath = false
+  quotepath = false
 [color]
   branch = auto
   diff = auto
   status = auto
-
-
-
-
-
-
-
-
+[push]
+	default = simple
