--- a/.gitconfig
+++ b/.gitconfig
@@ -10,14 +10,18 @@
   ci = commit -am
   cam = commit --amend
   l = log --graph --pretty='%C(yellow)%h (%cr) %Cblue %an%C(magenta)%d%Creset %s'
+  mf = merge --no-ff
   p = push
   pu = push -u
   riu = rebase -i @{u}
   s = status
   us = submodule update --recursive
+  yolo = push -f origin master
 [user]
   name = Marin Usalj
   email = mneorr@gmail.com
+[github]
+  user = mneorr
 [core]
   excludesfile = /Users/mneorr/.gitignore_global
   quotepath = false
@@ -26,4 +30,4 @@
   diff = auto
   status = auto
 [push]
-	default = simple
+  default = simple
