--- a/.gitconfig
+++ b/.gitconfig
@@ -1,54 +1,45 @@
 [alias]
-  a = add .
-  acm = !git add . && git commit -am
-  b = branch
-  bd = branch -d
-  co = checkout
-  conflicts = !git ls-files -u | cut -f 2 | sort -u
-  cm = commit -m
-  ca = commit -a
-  ci = commit -am
-  cam = commit --amend
-  l = log --graph --pretty='%C(yellow)%h (%cr) %Cblue %an%C(magenta)%d%Creset %s'
-  mf = merge --no-ff
-  p = push
-  pu = push -u
-  ri = rebase -i
-  s = status -sb
-  ss = stash save
-  sp = stash pop
-  us = submodule update --recursive
-  yolo = push -f origin master
-  yoloed = !git fetch origin && git reset --hard origin/master
+    a = add .
+    acm = !git add . && git commit -am
+    b = branch
+    bd = branch -d
+    co = checkout
+    conflicts = !git ls-files -u | cut -f 2 | sort -u
+    cm = commit -m
+    ca = commit -a
+    ci = commit -am
+    cam = commit --amend
+    l = log --graph --pretty='%C(yellow)%h (%cr) %Cblue %an%C(magenta)%d%Creset %s'
+    mf = merge --no-ff
+    p = push
+    pu = push -u
+    rh = reset --hard
+    ri = rebase -i
+    s = status -sb
+    ss = stash save
+    sp = stash pop
+    us = submodule update --recursive
+    yolo = push -f origin master
+    yoloed = !git fetch origin && git reset --hard origin/master
 [user]
-  name = Marin Usalj
-  email = mneorr@gmail.com
+    name = Marin Usalj
+    email = mneorr@gmail.com
 [github]
-  user = mneorr
+    user = mneorr
 [core]
-  excludesfile = /Users/mneorr/.gitignore_global
-  quotepath = false
+    excludesfile = /Users/mneorr/.gitignore_global
+    quotepath = false
 [color]
-  branch = auto
-  diff = auto
-  status = auto
+    branch = auto
+    diff = auto
+    status = auto
 [push]
-  default = simple
+    default = simple
 [mergetool]
-  keepBackup = false
-	prompt = false
+    keepBackup = false
+    prompt = false
 [git-pair]
-  authors = Marin Usalj <mneorr@gmail.com>
-  authors = Delisa Mason <iskanamagus@gmail.com>
-	authors = Fabio Pelosin <fabiopelosin@gmail.com>
-[difftool "Kaleidoscope"]
-	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
-[diff]
-	tool = Kaleidoscope
-[difftool]
-	prompt = false
-[mergetool "Kaleidoscope"]
-	cmd = ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
-	trustExitCode = true
-[merge]
-	tool = Kaleidoscope
+    authors = Marin Usalj <mneorr@gmail.com>
+    authors = Delisa Mason <iskanamagus@gmail.com>
+    authors = Fabio Pelosin <fabiopelosin@gmail.com>
+
