--- a/.gitconfig
+++ b/.gitconfig
@@ -28,7 +28,7 @@
 [core]
     excludesfile = /Users/mneorr/.gitignore_global
     quotepath = false
-
+	trustctime = false
 [color]
     branch = auto
     diff = auto
