--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
     mf = merge --no-ff
     rh = reset --hard
     ri = rebase -i
+    rc = rebase --continue
     s = status -sb
     ss = stash save
     sp = stash pop
@@ -40,7 +41,7 @@
     diff = diff-highlight | less
 
 [push]
-    default = simple
+    default = upstream
 
 [mergetool]
     keepBackup = false
@@ -50,4 +51,6 @@
     authors = Marin Usalj <mneorr@gmail.com>
     authors = Delisa Mason <iskanamagus@gmail.com>
     authors = Fabio Pelosin <fabiopelosin@gmail.com>
+;[ghi]
+    ;token = !security find-generic-password -wgs github.oauth_token | tr -d '\n'
 
