fixed gopath and added python3 path

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# PATH
+### PATH
 export PATH=/usr/bin:/bin:/usr/sbin:/sbin
 
 ## Heroku Toolbelt
@@ -7,6 +7,9 @@ export PATH="/usr/local/heroku/bin:$PATH"
 ## pip
 export PATH=~/Library/Python/2.7/bin:$PATH
 
+## Python3
+export PKG_CONFIG_PATH=/usr/local/Cellar/python3/3.3.4/Frameworks/Python.framework/Versions/3.3/lib/pkgconfig/
+
 ## Npm
 export PATH=/usr/local/share/npm/bin:$PATH
 
@@ -14,7 +17,8 @@ export PATH=/usr/local/share/npm/bin:$PATH
 export PATH=/usr/local/bin:$PATH
 
 ## Go
-export PATH=~/code/go:$PATH
+export GOPATH=~/code/go
+export PATH=$GOPATH/bin:$PATH
 
 ## Rbenv
 if which rbenv > /dev/null; then eval "$(rbenv init -)"; fi
