--- a/.gitconfig
+++ b/.gitconfig
@@ -24,7 +24,7 @@
 	email = mneorr@gmail.com
 
 [github]
-    user = mneorr
+    user = supermarin
 
 [core]
     excludesfile = /Users/mneorr/.gitignore_global
