Set vi as default editor

--- a/.env
+++ b/.env
@@ -23,6 +23,9 @@ export PATH=$GOPATH/bin:$PATH
 ## Rbenv
 if which rbenv > /dev/null; then eval "$(rbenv init -)"; fi
 
-## Custom scripts
+## home /bin
 export PATH=~/bin:$PATH
+
+## Editor
+export EDITOR=vi
 
