--- a/.env
+++ b/.env
@@ -1,31 +1,28 @@
-### PATH
+#!/bin/sh
+
+# PATH
 export PATH=/usr/bin:/bin:/usr/sbin:/sbin
 
-## Heroku Toolbelt
-export PATH="/usr/local/heroku/bin:$PATH"
+# ~/.bin - Should be used for some symlinks and scripts, like diff-highlight
+export PATH=$HOME/.bin:$PATH
 
-## pip
-export PATH=~/Library/Python/2.7/bin:$PATH
-
-## Python3
-export PKG_CONFIG_PATH=/usr/local/Cellar/python3/3.3.4/Frameworks/Python.framework/Versions/3.3/lib/pkgconfig/
-
-## Npm
+# Npm
 export PATH=/usr/local/share/npm/bin:$PATH
 
-## Homebrew
+# Homebrew
 export PATH=/usr/local/bin:$PATH
 
-## Go
-export GOPATH=~/code/go
+# Go
+export GOPATH=$HOME/code/go
+export GOBIN=$HOMEBIN
 export PATH=$GOPATH/bin:$PATH
 
-## Rbenv
-if which rbenv > /dev/null; then eval "$(rbenv init -)"; fi
-
-## home /bin
-export PATH=~/bin:$PATH
-
-## Editor
+# Editor
 export EDITOR=vi
+export VISUAL=vi
 
+# Move GH private stuff out
+export GH_CONFIG=~/.gh
+
+# Homebrew cask nonsense
+export HOMEBREW_CASK_OPTS="--appdir=/Applications"
