--- a/.gitconfig
+++ b/.gitconfig
@@ -3,53 +3,73 @@
     b = branch
     bd = branch -d
     ba = branch -a
+    commit = commit -v
     c = commit
     co = checkout
     conflicts = !git ls-files -u | cut -f 2 | sort -u
     cam = commit --amend
     l = log --graph --pretty='%C(yellow)%h (%cr) %Cblue %an%C(magenta)%d%Creset %s'
+    me = !git l --author=Marin
     mf = merge --no-ff
     rh = reset --hard
+    ra = rebase --abort
     ri = rebase -i
     rc = rebase --continue
+    releases = !git branch -a | grep release
     s = status -sb
+    sl = stash list
+    snc = !git pull && git submodule update --init --recursive
     ss = stash save
     sp = stash pop
-    us = submodule update --recursive
+    su = submodule update --recursive
+    today = !git whathaveidone 1.day
     yolo = push -f origin master
     yoloed = !git fetch origin && git reset --hard origin/master
+    week = !git whathaveidone 1.week
     whathaveidone = !git l --author=Marin --since
 
 [user]
 	name = Marin Usalj
-	email = mneorr@gmail.com
+	email = marin2211@gmail.com
 
 [github]
     user = supermarin
 
 [core]
-    excludesfile = /Users/mneorr/.gitignore_global
+    excludesfile = ~/.gitignore_global
     quotepath = false
-	trustctime = false
+    trustctime = false
+
 [color]
     branch = auto
     diff = auto
     status = auto
 
 [pager]
+    diff = diff-highlight | less
     log = diff-highlight | less
     show = diff-highlight | less
-    diff = diff-highlight | less
 
 [push]
     default = upstream
+
+[pull]
+    rebase = true
 
 [mergetool]
     keepBackup = false
     prompt = false
 
 [git-pair]
-    authors = Marin Usalj <mneorr@gmail.com>
+    authors = Marin Usalj <marin2211@gmail.com>
     authors = Delisa Mason <iskanamagus@gmail.com>
     authors = Fabio Pelosin <fabiopelosin@gmail.com>
 
+[ghi]
+    token = !security find-internet-password -a supermarin -s github.com -l 'ghi token' -w
+[i18n]
+    commitencoding = utf8
+[filter "lfs"]
+    clean = git-lfs clean %f
+    smudge = git-lfs smudge %f
+    required = true
