--- a/.env
+++ b/.env
@@ -1,27 +1,19 @@
 #!/bin/sh
 
-# PATH
 export PATH=/usr/bin:/bin:/usr/sbin:/sbin
+PATH=$HOME/.bin:$PATH # symlinks and scripts, like diff-highlight
+PATH=/usr/local/share/npm/bin:$PATH # npm
+PATH=/usr/local/bin:$PATH # Homebrew
 
-# ~/.bin - Should be used for some symlinks and scripts, like diff-highlight
-export PATH=$HOME/.bin:$PATH
-
-# Npm
-export PATH=/usr/local/share/npm/bin:$PATH
-
-# Homebrew
-export PATH=/usr/local/bin:$PATH
-
-# Go
 export GOPATH=$HOME/code/go
-export PATH=$GOPATH/bin:$PATH
+PATH=$GOPATH/bin:$PATH
 
-# Editor
+# Open files, git commits, etc. with Vim
 export EDITOR=vi
 export VISUAL=vi
 
-# Move GH private stuff out
+# Move GH private stuff out of .config
 export GH_CONFIG=~/.gh
 
-# Homebrew cask nonsense
+# Usually, Homebrew installs in ~/Applications
 export HOMEBREW_CASK_OPTS="--appdir=/Applications"
