Use local gems and system Ruby

--- a/.env
+++ b/.env
@@ -5,12 +5,19 @@ PATH=$HOME/.bin:$PATH # symlinks and scripts, like diff-highlight
 PATH=/usr/local/share/npm/bin:$PATH # npm
 PATH=/usr/local/bin:$PATH # Homebrew
 
+# Ruby
+export GEM_HOME=$HOME/.gem
+export GEM_PATH=$GEM_HOME
+PATH=$GEM_HOME/bin:$PATH
+
+# Golang
 export GOPATH=$HOME/code/go
 PATH=$GOPATH/bin:$PATH
 
 # Open files, git commits, etc. with Vim
-export EDITOR=vi
-export VISUAL=vi
+editor=vim
+export EDITOR=$editor
+export VISUAL=$editor
 
 # Move GH private stuff out of .config
 export GH_CONFIG=~/.gh
