Update mackup stuff
I should probably get rid of this and switch back to manual linking.

--- a/.mackup.cfg
+++ b/.mackup.cfg
@@ -1,2 +1,13 @@
+[storage]
+engine = file_system
+path = Sync
+
 [applications_to_ignore]
 messages
+
+[configuration_files]
+.aliases
+.env
+.todo.cfg
+.antigen/antigen.zsh
+.bin
