Steal a couple good shortcuts from @kattrali

--- a/.tigrc
+++ b/.tigrc
@@ -1,3 +1,12 @@
 set ignore-space = all
 
+bind generic   r    refresh
+bind generic   P    ?git stash pop
+bind generic   S    ?git stash
+bind main      R    ?git rebase -i %(commit)
+bind generic   A    !git commit --amend
+bind main      C    !git commit --verbose
+bind status    C    !git commit --verbose
+bind status    a    !git add -p %(file)
+
 color cursor white black bold
