Make gpg2 not fail on commits
Fix found here: https://github.com/keybase/keybase-issues/issues/1712

--- a/.env
+++ b/.env
@@ -24,3 +24,6 @@ export GH_CONFIG=~/.gh
 
 # Usually, Homebrew installs in ~/Applications
 export HOMEBREW_CASK_OPTS="--appdir=/Applications"
+
+# WAT gpg
+export GPG_TTY=$(tty)
