--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -1,11 +1,11 @@
 # Options for GnuPG
 # Copyright 1998, 1999, 2000, 2001, 2002, 2003,
 #           2010 Free Software Foundation, Inc.
-# 
+#
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
 # modifications, as long as this notice is preserved.
-# 
+#
 # This file is distributed in the hope that it will be useful, but
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
@@ -66,7 +66,7 @@
 # as default character set.  In most cases this option is not required
 # as GnuPG is able to figure out the correct charset at runtime.
 
-#charset utf-8
+charset utf-8
 
 # Group names may be defined like this:
 #   group mynames = paige 0x12345678 joe patti
@@ -114,6 +114,7 @@
 # the "--keyserver-options debug".
 
 keyserver hkp://keys.gnupg.net
+keyserver pgp.mit.edu
 #keyserver mailto:pgp-public-keys@keys.nl.pgp.net
 #keyserver ldap://keyserver.pgp.com
 
@@ -148,7 +149,7 @@ keyserver hkp://keys.gnupg.net
 # no-include-attributes : do not include attribute IDs (aka "photo IDs")
 #                         when sending keys to the keyserver.
 
-#keyserver-options auto-key-retrieve
+keyserver-options auto-key-retrieve
 
 # Display photo user IDs in key listings
 
@@ -196,15 +197,15 @@ keyserver hkp://keys.gnupg.net
 # at ftp.gnupg.org/gcrypt/alpha/aegypten/).  To make use of the agent,
 # you have to run an agent as daemon and use the option
 #
-# use-agent
-# 
+use-agent
+#
 # which tries to use the agent but will fallback to the regular mode
 # if there is a problem connecting to the agent.  The normal way to
 # locate the agent is by looking at the environment variable
 # GPG_AGENT_INFO which should have been set during gpg-agent startup.
 # In certain situations the use of this variable is not possible, thus
 # the option
-# 
+#
 # --gpg-agent-info=<path>:<pid>:1
 #
 # may be used to override it.
@@ -216,7 +217,7 @@ keyserver hkp://keys.gnupg.net
 # address (in the "user@example.com" form), and there are no
 # user@example.com keys on the local keyring.  This option takes the
 # following arguments, in the order they are to be tried:
-# 
+#
 # cert = locate a key using DNS CERT, as specified in RFC-4398.
 #        GnuPG can handle both the PGP (key) and IPGP (URL + fingerprint)
 #        CERT methods.
