Use vivaldi as default browser

--- a/Alfred.alfredpreferences/workflows/user.workflow.28689CBC-A31F-4A3C-9E51-6EFDFEFD2D9E/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.28689CBC-A31F-4A3C-9E51-6EFDFEFD2D9E/info.plist
@@ -33,7 +33,7 @@
 			<dict>
 				<key>paths</key>
 				<array>
-					<string>/Applications/Firefox.app</string>
+					<string>/Applications/Vivaldi.app</string>
 				</array>
 				<key>toggle</key>
 				<false/>
