Switch to iterm temporarily
It seems like it renders faster than terminal

--- a/Alfred.alfredpreferences/workflows/user.workflow.9A128597-4F3C-4C79-A0B6-C9C2D2FD6E4B/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.9A128597-4F3C-4C79-A0B6-C9C2D2FD6E4B/info.plist
@@ -60,7 +60,7 @@
 			<dict>
 				<key>paths</key>
 				<array>
-					<string>/Applications/Utilities/Terminal.app</string>
+					<string>/Applications/iTerm.app</string>
 				</array>
 				<key>toggle</key>
 				<false/>
