--- a/Alfred.alfredpreferences/workflows/user.workflow.28689CBC-A31F-4A3C-9E51-6EFDFEFD2D9E/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.28689CBC-A31F-4A3C-9E51-6EFDFEFD2D9E/info.plist
@@ -15,6 +15,8 @@
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 		</array>
 	</dict>
@@ -33,7 +35,7 @@
 			<dict>
 				<key>paths</key>
 				<array>
-					<string>/Applications/Safari.app</string>
+					<string>/Applications/Safari Technology Preview.app</string>
 				</array>
 				<key>toggle</key>
 				<false/>
@@ -43,7 +45,7 @@
 			<key>uid</key>
 			<string>466494F1-31CF-4BDB-9AC6-6B82DDD19676</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -70,7 +72,7 @@
 			<key>uid</key>
 			<string>87D676AA-7789-4F8C-9A56-E220685E2CCB</string>
 			<key>version</key>
-			<integer>1</integer>
+			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
@@ -79,11 +81,15 @@
 	<dict>
 		<key>466494F1-31CF-4BDB-9AC6-6B82DDD19676</key>
 		<dict>
+			<key>xpos</key>
+			<integer>500</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
 		<key>87D676AA-7789-4F8C-9A56-E220685E2CCB</key>
 		<dict>
+			<key>xpos</key>
+			<integer>100</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
