--- a/.env
+++ b/.env
@@ -21,6 +21,11 @@ editor=vim
 export EDITOR=$editor
 export VISUAL=$editor
 
+# FZF - seems like Vim integration is a bit broken.
+# It doesn't respect .gitignore unless this is specifically set.
+# TODO: try to move this out / make it better.
+export FZF_DEFAULT_COMMAND='ag -g ""'
+
 # Move GH private stuff out of .config
 export GH_CONFIG=~/.gh
 
