define GOBIN again
without this, `go install` was putting binaries in the repo

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ PATH=$GEM_HOME/bin:$PATH
 
 # Golang
 export GOPATH=$HOME/code/go
+export GOBIN=$GOPATH/bin
 PATH=$GOPATH/bin:$PATH
 
 # Open files, git commits, etc. with Vim
