fix fzf file list using ripgrep

--- a/.env
+++ b/.env
@@ -16,14 +16,13 @@ export GOBIN=$GOPATH/bin
 PATH=$GOPATH/bin:$PATH
 
 # Open files, git commits, etc. with Vim
-editor=vim
+editor=nvim
 export EDITOR=$editor
 export VISUAL=$editor
 
-# FZF - seems like Vim integration is a bit broken.
-# It doesn't respect .gitignore unless this is specifically set.
-# TODO: try to move this out / make it better.
-export FZF_DEFAULT_COMMAND='ag -g ""'
+# Make FZF great again
+export FZF_DEFAULT_COMMAND='rg --files --no-ignore --hidden --follow \
+    --glob "!.git/*" --glob "!build/"'
 
 # Move GH private stuff out of .config
 export GH_CONFIG=~/.gh
