--- a/Alfred.alfredpreferences/workflows/user.workflow.BE8AFEB5-AFA6-4856-A961-AA0C9734B6D7/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.BE8AFEB5-AFA6-4856-A961-AA0C9734B6D7/info.plist
@@ -10,11 +10,13 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>39166B05-F724-4F06-9064-E68FD4652C95</string>
+				<string>A0C66119-7933-464B-9420-E016CFDAC440</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 		</array>
 	</dict>
@@ -31,27 +33,14 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>paths</key>
-				<array>
-					<string>/Applications/Tweetbot.app</string>
-				</array>
-				<key>toggle</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.launchfiles</string>
-			<key>uid</key>
-			<string>39166B05-F724-4F06-9064-E68FD4652C95</string>
-			<key>version</key>
-			<integer>0</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>action</key>
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
 				<integer>17</integer>
 				<key>hotmod</key>
@@ -70,6 +59,23 @@
 			<key>uid</key>
 			<string>E0FDD88F-0DCA-446B-9579-07AA3B9A6480</string>
 			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>paths</key>
+				<array>
+					<string>/Applications/Twitter.app</string>
+				</array>
+				<key>toggle</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.launchfiles</string>
+			<key>uid</key>
+			<string>A0C66119-7933-464B-9420-E016CFDAC440</string>
+			<key>version</key>
 			<integer>1</integer>
 		</dict>
 	</array>
@@ -77,13 +83,17 @@
 	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>39166B05-F724-4F06-9064-E68FD4652C95</key>
+		<key>A0C66119-7933-464B-9420-E016CFDAC440</key>
 		<dict>
+			<key>xpos</key>
+			<integer>550</integer>
 			<key>ypos</key>
-			<real>10</real>
+			<integer>20</integer>
 		</dict>
 		<key>E0FDD88F-0DCA-446B-9579-07AA3B9A6480</key>
 		<dict>
+			<key>xpos</key>
+			<integer>100</integer>
 			<key>ypos</key>
 			<real>20</real>
 		</dict>
