get rid of submodule
this was a pain in the butt with syncthing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,33 @@
-oh-my-tmux/.tmux.conf
+source ~/.tmux/oh-my-tmux.conf
+
+###############################################################################
+# Custom keybindings
+###############################################################################
+
+# Split with | and -
+bind | split-window -h
+bind - split-window -v
+
+# Swapping
+bind X swap-pane -U
+
+# Experiment with iTerm-style keybindings
+bind -n M-d split-window -h
+bind -n M-D split-window -v
+bind -n M-t new-window
+
+# Move between windows with - Ctrl-Option-h/l
+bind -n M-C-h select-window -t :-
+bind -n M-C-l select-window -t :+
+
+# Zoom / unzoom pane with Ctrl-Option-Z
+bind -n M-Enter resize-pane -Z
+
+# Experimental, esc to copy mode
+bind Escape copy-mode
+
+# reload ~/.tmux.conf using PREFIX r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# url viewing!!1!
+bind u capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 'bash -c "urlview < /tmp/tmux-buffer"'
