wtf just happened with tmux files and syncthing and submodules
thank you .stversions Trash versioning <3

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-source ~/.tmux/oh-my-tmux.conf
+run 'for i in ~/.tmux/*.tmux.conf; do tmux source $i; done'
 
 ###############################################################################
 # Custom keybindings
