--- a/.tmux/colors.tmux.conf
+++ b/.tmux/colors.tmux.conf
@@ -1,10 +1,4 @@
 ################################################################################
-# PANE BORDERS
-################################################################################
-set -g pane-border-fg white
-set -g pane-active-border-fg red
-
-################################################################################
 # STATUS LINE
 ################################################################################
 # default statusbar colors
@@ -19,6 +13,10 @@ set-window-option -g window-status-bg default
 # active window title colors
 set-window-option -g window-status-current-fg red
 set-window-option -g window-status-current-bg default
+
+# pane borders
+set -g pane-border-fg white
+set -g pane-active-border-fg blue
 
 # message text
 set-option -g message-bg default
