--- a/.tmux/unfuck.tmux.conf
+++ b/.tmux/unfuck.tmux.conf
@@ -7,7 +7,8 @@
 set -g default-shell $SHELL
 
 # unfuck the terminal colors
-set -g default-terminal "screen-256color"
+set -g  default-terminal   "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # unfuck the Esc
 set -s escape-time 0
@@ -41,7 +42,6 @@ set -g bell-action none
 
 # unfuck status line notifications
 setw -g monitor-activity on
-set -g visual-activity on
 
 ###############################################################################
 # OSX specific
@@ -50,15 +50,15 @@ set -g visual-activity on
 # From: https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Escape to cancel selection
-bind-key -t vi-copy Escape cancel
+## Escape to cancel selection
+bind -Tcopy-mode-vi Escape send -X cancel
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+## Update default binding of `Enter` to also use copy-pipe
+unbind -Tcopy-mode-vi Enter
+bind   -Tcopy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Use this wrapper to start the shell for each new window
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+## Use this wrapper to start the shell for each new window
+set -g default-command "reattach-to-user-namespace -l $SHELL"
