--- a/.tmux/statusline.tmux.conf
+++ b/.tmux/statusline.tmux.conf
@@ -4,5 +4,6 @@
 
 set -g status-interval 2
 
-set -g status-right "%a %b %e  %H:%M |#(rainbarf --bg black --width 10 --remaining)#[default]"
+#set -g status-right "%a %b %e  %H:%M |#(rainbarf --bg black --width 10 --remaining)#[default]"
+set -g status-right "[Mem #(tmux-mem-cpu-load -m 2 -a 0 -g 0 -i 2) CPU] [#(pmset -g batt | tail -n 1 | cut -d ' ' -f 3-  | cut -d ';' -f 1), #(pmset -g batt | tail -n 1 | cut -d ' ' -f 3-  | cut -d ';' -f 3 | cut -d ' ' -f 2)h] %a %b %e  %H:%M"
 set -g status-right-length 120
