more tmux fiasco

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-run 'for i in ~/.tmux/*.tmux.conf; do tmux source $i; done'
+run 'for i in ~/.tmux/*.conf; do echo "sourcing $i"; tmux source $i; done'
 
 ###############################################################################
 # Custom keybindings
