add linuxbrew to PATH

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ export PATH=/usr/bin:/bin:/usr/sbin:/sbin
 
 PATH=/usr/local/share/npm/bin:$PATH # npm
 PATH=/usr/local/bin:$PATH # Homebrew
+PATH=$HOME/.linuxbrew/bin:$PATH # Homebrew
 
 # Ruby
 export GEM_HOME=$HOME/.gem
