Add .local/bin and .linuxbrew/bin to PATH

--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ export PATH=/usr/bin:/bin:/usr/sbin:/sbin
 
 PATH=/usr/local/share/npm/bin:$PATH # npm
 PATH=/usr/local/bin:$PATH # Homebrew
-PATH=$HOME/.linuxbrew/bin:$PATH # Homebrew
+PATH=$HOME/.local/bin:$PATH # linux
+PATH=$HOME/.linuxbrew/bin:$PATH # linux Homebrew
 
 # Ruby
 export GEM_HOME=$HOME/.gem
