second attempt: retain cwd for new panes / windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,9 +12,9 @@ bind - split-window -v
 bind X swap-pane -U
 
 # Experiment with iTerm-style keybindings
-bind -n M-d split-window -h
-bind -n M-D split-window -v
-bind -n M-t new-window
+bind -n M-d split-window -h -c '#{pane_current_path}'
+bind -n M-D split-window -v -c '#{pane_current_path}'
+bind -n M-t new-window -c '#{pane_current_path}'
 
 # Move between windows with - Ctrl-Option-h/l
 bind -n M-C-h select-window -t :-
