[tmux] recover lost settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,11 @@ run 'for i in ~/.tmux/*.conf; do echo "sourcing $i"; tmux source $i; done'
 # Custom keybindings
 ###############################################################################
 
+# prefix
+unbind C-b
+set -g prefix C-s
+bind C-s send-prefix
+
 # Split with | and -
 bind | split-window -h
 bind - split-window -v
@@ -14,14 +19,14 @@ bind X swap-pane -U
 # Experiment with iTerm-style keybindings
 bind -n M-d split-window -h -c '#{pane_current_path}'
 bind -n M-D split-window -v -c '#{pane_current_path}'
-bind -n M-t new-window -c '#{pane_current_path}'
+bind -n M-t new-window      -c '#{pane_current_path}'
 
 # Move between windows with - Ctrl-Option-h/l
 bind -n M-C-h select-window -t :-
 bind -n M-C-l select-window -t :+
 
-# Zoom / unzoom pane with Ctrl-Option-Z
-bind -n M-Enter resize-pane -Z
+# Zoom / unzoom pane with Option-z
+bind -n M-z resize-pane -Z
 
 # Experimental, esc to copy mode
 bind Escape copy-mode
