--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,10 @@
+###############################################################################
+# Configuration files
+###############################################################################
+
 run 'for i in ~/.tmux/*.conf; do echo "sourcing $i"; tmux source $i; done'
+run '[ $(uname) = "Darwin" ] && \
+    for i in ~/.tmux/osx/*.conf; do echo "sourcing $i"; tmux source $i; done'
 
 ###############################################################################
 # Custom keybindings
