replace FZF with skim

--- a/.env
+++ b/.env
@@ -22,9 +22,10 @@ editor=nvim
 export EDITOR=$editor
 export VISUAL=$editor
 
-# Make FZF great again
-export FZF_DEFAULT_COMMAND='rg --files --no-ignore --hidden --follow \
-    --glob "!.git/*" --glob "!build/"'
+# Make SKIM great again
+export RG_DEFAULT_OPTIONS='-S --no-ignore --hidden --follow --glob "!tags" --glob "!.git/*" --glob "!build/"'
+export SKIM_DEFAULT_COMMAND="rg --files $RG_DEFAULT_OPTIONS"
+export SKIM_DEFAULT_OPTIONS="--color=light"
 
 # Move GH private stuff out of .config
 export GH_CONFIG=~/.gh
