--- a/.tigrc
+++ b/.tigrc
@@ -17,7 +17,7 @@ bind generic   A    !git commit --amend
 
 bind main      R    ?git rebase -i %(commit)
 bind main      C    !git commit --verbose
-bind main      G    !sh -c "open https://github.com/$(git remote get-url origin | cut -d ':' -f2)/commit/%(commit)"
+bind main      G    !sh -c "open https://github.com/$(git remote get-url origin | cut -d ':' -f2 | sed 's/\(.git\)//')/commit/%(commit)"
 
 bind status    C    !git commit --verbose
 bind status a       !?git commit --amend
