suppress shellcheck warning

--- a/.env
+++ b/.env
@@ -34,4 +34,5 @@ export GH_CONFIG=~/.gh
 export HOMEBREW_CASK_OPTS="--appdir=/Applications"
 
 # WAT gpg
+# shellcheck disable=2155
 export GPG_TTY=$(tty)
