--- a/Alfred.alfredpreferences/workflows/user.workflow.9A128597-4F3C-4C79-A0B6-C9C2D2FD6E4B/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.9A128597-4F3C-4C79-A0B6-C9C2D2FD6E4B/info.plist
@@ -37,6 +37,10 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
 				<integer>53</integer>
 				<key>hotmod</key>
@@ -62,6 +66,23 @@
 			<dict>
 				<key>paths</key>
 				<array>
+					<string>/Applications/Utilities/Terminal.app</string>
+				</array>
+				<key>toggle</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.launchfiles</string>
+			<key>uid</key>
+			<string>20F37394-E0B1-4549-AA44-0A139589B6B4</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>paths</key>
+				<array>
 					<string>/Applications/iTerm.app</string>
 				</array>
 				<key>toggle</key>
@@ -79,12 +100,19 @@
 	<string></string>
 	<key>uidata</key>
 	<dict>
+		<key>20F37394-E0B1-4549-AA44-0A139589B6B4</key>
+		<dict>
+			<key>xpos</key>
+			<integer>490</integer>
+			<key>ypos</key>
+			<integer>10</integer>
+		</dict>
 		<key>2C1B5EC1-98D5-4E2F-918B-88E3168E3584</key>
 		<dict>
 			<key>xpos</key>
-			<integer>500</integer>
+			<integer>490</integer>
 			<key>ypos</key>
-			<real>10</real>
+			<integer>290</integer>
 		</dict>
 		<key>E607D41B-9329-4506-9AED-76A34BDEA6D8</key>
 		<dict>
