--- a/Alfred.alfredpreferences/workflows/user.workflow.EDBF3851-D720-4437-BD86-7CCA9E435159/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.EDBF3851-D720-4437-BD86-7CCA9E435159/info.plist
@@ -6,7 +6,7 @@
 	<string></string>
 	<key>connections</key>
 	<dict>
-		<key>B1022FCA-3448-4046-932C-BC1CD6ECA4D0</key>
+		<key>7213B9DD-FB86-4089-92F3-AC74ED764574</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
@@ -37,6 +37,10 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
 				<integer>1</integer>
 				<key>hotmod</key>
@@ -53,7 +57,7 @@
 			<key>type</key>
 			<string>alfred.workflow.trigger.hotkey</string>
 			<key>uid</key>
-			<string>B1022FCA-3448-4046-932C-BC1CD6ECA4D0</string>
+			<string>7213B9DD-FB86-4089-92F3-AC74ED764574</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -79,17 +83,17 @@
 	<string></string>
 	<key>uidata</key>
 	<dict>
+		<key>7213B9DD-FB86-4089-92F3-AC74ED764574</key>
+		<dict>
+			<key>xpos</key>
+			<integer>80</integer>
+			<key>ypos</key>
+			<integer>10</integer>
+		</dict>
 		<key>742226F1-5D04-42DD-832C-39613D3CDEA3</key>
 		<dict>
 			<key>xpos</key>
 			<integer>500</integer>
-			<key>ypos</key>
-			<real>10</real>
-		</dict>
-		<key>B1022FCA-3448-4046-932C-BC1CD6ECA4D0</key>
-		<dict>
-			<key>xpos</key>
-			<integer>100</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
