make C work in any view

--- a/.tigrc
+++ b/.tigrc
@@ -14,10 +14,10 @@ bind generic   r    refresh
 bind generic   P    ?git stash pop
 bind generic   S    ?git stash
 bind generic   A    !git commit --amend
+bind generic   C    !git commit --verbose
 bind generic   p    !@sh -c "printf %s %(commit) | cut -c -7 | pbcopy"
 
 bind main      R    ?git rebase -i %(commit)
-bind main      C    !git commit --verbose
 bind main      G    !sh -c "url=$(git ls-remote --get-url | cut -d ':' -f2); open https://github.com/${url%.git}/commit/%(commit)"
 
 bind status    C    !git commit --verbose
