--- a/Alfred.alfredpreferences/workflows/user.workflow.4A3E5566-9C20-4034-9938-4F89CD4C1E61/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.4A3E5566-9C20-4034-9938-4F89CD4C1E61/info.plist
@@ -6,11 +6,11 @@
 	<string></string>
 	<key>connections</key>
 	<dict>
-		<key>87F33A7E-002E-4566-8501-C4CD22DB66B9</key>
+		<key>BF82ED5A-C7D5-40D2-A349-AF230FAF9CF0</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>5368C7EB-803C-4776-88D2-59C5DEB31C9C</string>
+				<string>ABC73218-8B90-4072-B29A-230B590EDCEC</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -21,15 +21,30 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Marin Usalj</string>
-	<key>description</key>
 	<string></string>
+	<key>description</key>
+	<string>get password for the current website</string>
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>Launch Xcode</string>
+	<string>Password</string>
 	<key>objects</key>
 	<array>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>escaping</key>
+				<integer>0</integer>
+				<key>script</key>
+				<string>p; sleep 1; exit</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.terminalcommand</string>
+			<key>uid</key>
+			<string>ABC73218-8B90-4072-B29A-230B590EDCEC</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -42,11 +57,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>7</integer>
+				<integer>35</integer>
 				<key>hotmod</key>
 				<integer>1310720</integer>
 				<key>hotstring</key>
-				<string>X</string>
+				<string>P</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -57,48 +72,31 @@
 			<key>type</key>
 			<string>alfred.workflow.trigger.hotkey</string>
 			<key>uid</key>
-			<string>87F33A7E-002E-4566-8501-C4CD22DB66B9</string>
+			<string>BF82ED5A-C7D5-40D2-A349-AF230FAF9CF0</string>
 			<key>version</key>
 			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>paths</key>
-				<array>
-					<string>/Applications/Xcode-beta.app</string>
-				</array>
-				<key>toggle</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.launchfiles</string>
-			<key>uid</key>
-			<string>5368C7EB-803C-4776-88D2-59C5DEB31C9C</string>
-			<key>version</key>
-			<integer>1</integer>
 		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>5368C7EB-803C-4776-88D2-59C5DEB31C9C</key>
+		<key>ABC73218-8B90-4072-B29A-230B590EDCEC</key>
 		<dict>
 			<key>xpos</key>
-			<integer>500</integer>
+			<integer>390</integer>
 			<key>ypos</key>
-			<real>10</real>
+			<integer>70</integer>
 		</dict>
-		<key>87F33A7E-002E-4566-8501-C4CD22DB66B9</key>
+		<key>BF82ED5A-C7D5-40D2-A349-AF230FAF9CF0</key>
 		<dict>
 			<key>xpos</key>
-			<integer>100</integer>
+			<integer>140</integer>
 			<key>ypos</key>
-			<real>10</real>
+			<integer>70</integer>
 		</dict>
 	</dict>
 	<key>webaddress</key>
-	<string>mneorr.com</string>
+	<string></string>
 </dict>
 </plist>
