add rust in path

--- a/.env
+++ b/.env
@@ -17,6 +17,9 @@ export GOPATH=$HOME/code/go
 export GOBIN=$GOPATH/bin
 PATH=$GOPATH/bin:$PATH
 
+# Rust
+export PATH=$HOME/.cargo/bin:$PATH
+
 # Open files, git commits, etc. with Vim
 editor=nvim
 export EDITOR=$editor
