--- a/.tmux/osx/pb.conf
+++ b/.tmux/osx/pb.conf
@@ -6,14 +6,20 @@
 
 # Setup 'v' to begin selection as in Vim
 bind -Tcopy-mode-vi v send -X begin-selection
-bind -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Yank with y and exit selection
+bind -Tcopy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 ## Escape to cancel selection
 bind -Tcopy-mode-vi Escape send -X cancel
 
 ## Update default binding of `Enter` to also use copy-pipe
 unbind -Tcopy-mode-vi Enter
-bind   -Tcopy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind   -Tcopy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 ## Use this wrapper to start the shell for each new window
 set -g default-command "reattach-to-user-namespace -l $SHELL"
+
+## Support mouse selection and copy
+bind-key -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
