WIP tmux statusline

--- a/.tmux/colors.conf
+++ b/.tmux/colors.conf
@@ -1,23 +1,39 @@
 ################################################################################
 # STATUS LINE
 ################################################################################
-# default statusbar colors
-set-option -g status-bg default
-set-option -g status-fg default
-set-option -g status-attr default
-
 # default window title colors
-set-window-option -g window-status-fg default
-set-window-option -g window-status-bg default
+setw -g window-status-fg default
+setw -g window-status-bg default
 
 # active window title colors
-set-window-option -g window-status-current-fg red
-set-window-option -g window-status-current-bg default
+setw -g window-status-current-fg red
+setw -g window-status-current-bg default
+
+# default statusbar colors
+set -g status-bg default
+set -g status-fg default
+set -g status-attr default
+
+# panes with activity
+setw -g window-status-activity-attr none
+setw -g window-status-activity-fg blue
 
 # pane borders
 set -g pane-border-fg white
 set -g pane-active-border-fg blue
 
 # message text
-set-option -g message-bg default
-set-option -g message-fg brightred
+set -g message-bg default
+set -g message-fg brightred
+
+
+
+### TWEAK THIS set -g status-fg colour248
+### TWEAK THIS set -g status-bg colour233
+### TWEAK THIS set -g message-fg colour15
+### TWEAK THIS set -g message-bg colour233
+### TWEAK THIS set -g mode-fg colour15
+### TWEAK THIS set -g mode-bg colour33
+### TWEAK THIS
+### TWEAK THIS set -g window-status-format "#[fg=colour248] #I #W "
+### TWEAK THIS set -g window-status-current-format "#[fg=colour15,noreverse,bg=colour235] #I #W "
