remove setw, tmux broke APIs again..

--- a/.tmux/colors.conf
+++ b/.tmux/colors.conf
@@ -2,12 +2,12 @@
 # STATUS LINE
 ################################################################################
 # default window title colors
-setw -g window-status-fg default
-setw -g window-status-bg default
+set -g window-status-fg default
+set -g window-status-bg default
 
 # active window title colors
-setw -g window-status-current-fg red
-setw -g window-status-current-bg default
+set -g window-status-current-fg red
+set -g window-status-current-bg default
 
 # default statusbar colors
 set -g status-bg default
@@ -15,8 +15,8 @@ set -g status-fg default
 set -g status-attr default
 
 # panes with activity
-setw -g window-status-activity-attr none
-setw -g window-status-activity-fg blue
+set -g window-status-activity-attr none
+set -g window-status-activity-fg blue
 
 # pane borders
 set -g pane-border-fg white
