--- a/.tmux/navigation.conf
+++ b/.tmux/navigation.conf
@@ -1,5 +1,5 @@
 # act like vim
-setw -g mode-keys vi
+set -g mode-keys vi
 set  -g status-keys vi
 
 # Taken from https://github.com/christoomey/vim-tmux-navigator
