--- a/Alfred.alfredpreferences/workflows/user.workflow.51752388-8CCB-45B7-820C-55FF0E66D40F/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.51752388-8CCB-45B7-820C-55FF0E66D40F/info.plist
@@ -66,7 +66,7 @@
 			<dict>
 				<key>paths</key>
 				<array>
-					<string>/Applications/Xcode-beta.app</string>
+					<string>/Applications/Xcode.app</string>
 				</array>
 				<key>toggle</key>
 				<false/>
