--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,3 +42,9 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # url viewing!!1!
 bind u capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 'bash -c "urlview < /tmp/tmux-buffer"'
+
+# HAXX until Alacritty supports Option->Meta
+bind -n ∂ split-window -h -c '#{pane_current_path}'
+bind -n Î split-window -v -c '#{pane_current_path}'
+bind -n † new-window      -c '#{pane_current_path}'
+bind -n Ω resize-pane -Z
