--- a/Alfred.alfredpreferences/workflows/user.workflow.9A128597-4F3C-4C79-A0B6-C9C2D2FD6E4B/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.9A128597-4F3C-4C79-A0B6-C9C2D2FD6E4B/info.plist
@@ -10,7 +10,7 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>2C1B5EC1-98D5-4E2F-918B-88E3168E3584</string>
+				<string>BD77DD1F-1C9D-4725-88BF-AD7D60531F26</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -30,6 +30,23 @@
 	<string>Launch Terminal</string>
 	<key>objects</key>
 	<array>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>paths</key>
+				<array>
+					<string>/Applications/Utilities/Terminal.app</string>
+				</array>
+				<key>toggle</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.launchfiles</string>
+			<key>uid</key>
+			<string>20F37394-E0B1-4549-AA44-0A139589B6B4</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -66,7 +83,7 @@
 			<dict>
 				<key>paths</key>
 				<array>
-					<string>/Applications/Utilities/Terminal.app</string>
+					<string>/Applications/Alacritty.app</string>
 				</array>
 				<key>toggle</key>
 				<false/>
@@ -74,7 +91,7 @@
 			<key>type</key>
 			<string>alfred.workflow.action.launchfiles</string>
 			<key>uid</key>
-			<string>20F37394-E0B1-4549-AA44-0A139589B6B4</string>
+			<string>BD77DD1F-1C9D-4725-88BF-AD7D60531F26</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -113,6 +130,13 @@
 			<integer>490</integer>
 			<key>ypos</key>
 			<integer>290</integer>
+		</dict>
+		<key>BD77DD1F-1C9D-4725-88BF-AD7D60531F26</key>
+		<dict>
+			<key>xpos</key>
+			<integer>490</integer>
+			<key>ypos</key>
+			<integer>150</integer>
 		</dict>
 		<key>E607D41B-9329-4506-9AED-76A34BDEA6D8</key>
 		<dict>
