--- a/Alfred.alfredpreferences/workflows/user.workflow.9A128597-4F3C-4C79-A0B6-C9C2D2FD6E4B/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.9A128597-4F3C-4C79-A0B6-C9C2D2FD6E4B/info.plist
@@ -59,11 +59,11 @@
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>53</integer>
+				<integer>17</integer>
 				<key>hotmod</key>
-				<integer>524288</integer>
+				<integer>1310720</integer>
 				<key>hotstring</key>
-				<string>⎋</string>
+				<string>T</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
