update rg options

--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ export EDITOR=$editor
 export VISUAL=$editor
 
 # Make SKIM great again
-export RG_DEFAULT_OPTIONS='-S --no-ignore --hidden --follow --glob "!tags" --glob "!.git/*" --glob "!build/"'
+export RG_DEFAULT_OPTIONS='-S --color=auto --hidden --follow'
 export SKIM_DEFAULT_COMMAND="rg --files $RG_DEFAULT_OPTIONS"
 
 # Move GH private stuff out of .config
