Update tmux status and colors

--- a/.tmux/colors.conf
+++ b/.tmux/colors.conf
@@ -28,12 +28,16 @@ set -g message-fg brightred
 
 
 
-### TWEAK THIS set -g status-fg colour248
-### TWEAK THIS set -g status-bg colour233
-### TWEAK THIS set -g message-fg colour15
-### TWEAK THIS set -g message-bg colour233
-### TWEAK THIS set -g mode-fg colour15
-### TWEAK THIS set -g mode-bg colour33
 ### TWEAK THIS
-### TWEAK THIS set -g window-status-format "#[fg=colour248] #I #W "
-### TWEAK THIS set -g window-status-current-format "#[fg=colour15,noreverse,bg=colour235] #I #W "
+set -g status-bg colour237
+set -g status-fg colour233
+#set -g status-fg colour233
+
+
+#set -g message-fg colour15
+#set -g message-bg colour233
+#set -g mode-fg colour15
+#set -g mode-bg colour33
+### TWEAK THIS
+set -g window-status-format "#[fg=colour250] #W "
+set -g window-status-current-format "#[fg=colour15,noreverse,bg=colour234] #W "
