--- a/.tmux/statusline.tmux.conf
+++ b/.tmux/statusline.tmux.conf
@@ -4,5 +4,5 @@
 
 set -g status-position top
 set -g status-interval 2
-set -g status-right "[Mem #(tmux-mem-cpu-load -m 2 -a 0 -g 0 -i 2 -c) CPU] [#(pmset -g batt | grep id= | cut -f 2 | cut -f 1 -d ';'), #(pmset -g batt | tail -n 1 | cut -d ' ' -f 3-  | cut -d ';' -f 3 | cut -d ' ' -f 2)h] %a %b %e  %H:%M"
+set -g status-right '#(rainbarf --tmux --swap --remaining --bg default --width 20)'
 set -g status-right-length 120
