--- a/.tigrc
+++ b/.tigrc
@@ -29,3 +29,38 @@ bind status a       !?git commit --amend
 bind status    d    !/bin/rm -i %(file)
 bind status    r    !git reset %(file)
 
+
+
+# See: http://www.calmar.ws/vim/256-xterm-24bit-rgb-color-chart.html
+# See: http://jonas.nitro.dk/tig/tigrc.5.html
+#
+# Area                  Foreground      Background         Options
+# ==============================================================================
+
+# Main UI
+# ==============================================================================
+# color default           250             234 # original value, keep for light term
+color default           250             default
+color 'Author '         15              default
+color 'Commit: '        15             default
+color 'Merge: '         45              default
+color id                161             default
+color date              242             default
+# color graph-commit      161             default
+color status            15              default
+color delimiter         90              default
+color cursor            234             7
+
+# Help Page
+# ==============================================================================
+color help-group        161             default
+
+# Current Line
+# ==============================================================================
+color main-tracked      105             default             bold
+color cursor            234             7
+
+# Bottom Statusbar
+# ==============================================================================
+color title-focus       234             250
+color title-blur        234             250
