--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ export GOBIN=$GOPATH/bin
 PATH=$GOPATH/bin:$PATH
 
 # Rust
-export PATH=$HOME/.cargo/bin:$PATH
+export PATH="$HOME/.cargo/bin:$PATH"
 
 # Open files, git commits, etc. with Vim
 editor=nvim
@@ -38,3 +38,6 @@ export HOMEBREW_CASK_OPTS="--appdir=/Applications"
 # WAT gpg
 # shellcheck disable=2155
 export GPG_TTY=$(tty)
+
+# get rid of shell escape lag
+export KEYTIMEOUT=1
