controversial: switch editors

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ PATH=$GOPATH/bin:$PATH
 export PATH="$HOME/.cargo/bin:$PATH"
 
 # Open files, git commits, etc. with Vim
-editor=nvim
+editor=kak
 export EDITOR=$editor
 export VISUAL=$editor
 
