add new homebrew ruby path

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ PATH=$HOME/.linuxbrew/bin:$PATH # linux Homebrew
 export GEM_HOME=$HOME/.gem
 export GEM_PATH=$GEM_HOME
 PATH=$GEM_HOME/bin:$PATH
+PATH="/usr/local/opt/ruby/bin:$PATH"
 
 # Golang
 export GOPATH=$HOME/code/go
