update tmux settings

--- a/.tmux/unfuck.conf
+++ b/.tmux/unfuck.conf
@@ -43,3 +43,5 @@ set -g bell-action none
 # unfuck status line notifications
 setw -g monitor-activity on
 
+# unfuck error message disappearing after 1 second so good luck reading
+set-option -g display-time 8000
