--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,10 +22,17 @@ bind - split-window -v
 # Swapping
 bind X swap-pane -U
 
-# Experiment with iTerm-style keybindings
-bind -n M-d split-window -h -c '#{pane_current_path}'
-bind -n M-D split-window -v -c '#{pane_current_path}'
+# iTerm-style split keybindings
+#bind -n M-d split-window -h -c '#{pane_current_path}'
+#bind -n M-D split-window -v -c '#{pane_current_path}'
+
+bind -n M-\ split-window -h -c '#{pane_current_path}'
+bind -n M-- split-window -v -c '#{pane_current_path}'
 bind -n M-t new-window      -c '#{pane_current_path}'
+
+# Scroll up on Control-U
+# TODO: unfuck. actually make it scroll on <prefix> <C-u>
+# bind -n C-u enter-copy-mode; send -X scroll-up
 
 # Move between windows with - Ctrl-Option-h/l
 bind -n M-C-h select-window -t :-
@@ -42,9 +49,3 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # url viewing!!1!
 bind u capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 'bash -c "urlview < /tmp/tmux-buffer"'
-
-# HAXX until Alacritty supports Option->Meta
-bind -n ∂ split-window -h -c '#{pane_current_path}'
-bind -n Î split-window -v -c '#{pane_current_path}'
-bind -n † new-window      -c '#{pane_current_path}'
-bind -n Ω resize-pane -Z
