--- a/.tmux/colors.conf
+++ b/.tmux/colors.conf
@@ -9,35 +9,33 @@ set -g window-status-bg default
 set -g window-status-current-fg red
 set -g window-status-current-bg default
 
-# default statusbar colors
-set -g status-bg default
-set -g status-fg default
-set -g status-attr default
+# active and non-active windows
+set -g window-style 'fg=colour235'
+set -g window-active-style 'fg=colour255'
+
+# statusbar colors
+# set -g status-attr default
+set -g status-bg colour235
+set -g window-status-format "#[fg=colour232,noreverse,bg=colour235] #W "
+set -g window-status-current-format "#[fg=colour15,noreverse,bg=colour239]#{?window_zoomed_flag, 🔍 ,} #W "
 
 # panes with activity
 set -g window-status-activity-attr none
 set -g window-status-activity-fg blue
 
 # pane borders
-set -g pane-border-fg white
-set -g pane-active-border-fg blue
+set -g pane-border-fg colour235
+set -g pane-active-border-fg colour206 # pinkish 2
+
 
 # message text
+### TWEAK THIS
 set -g message-bg default
 set -g message-fg brightred
 
-
-
-### TWEAK THIS
-set -g status-bg colour237
-set -g status-fg colour233
-#set -g status-fg colour233
-
-
+# No idea where dis from
 #set -g message-fg colour15
-#set -g message-bg colour233
+#set -g message-bg colour238
 #set -g mode-fg colour15
 #set -g mode-bg colour33
-### TWEAK THIS
-set -g window-status-format "#[fg=colour250] #W "
-set -g window-status-current-format "#[fg=colour15,noreverse,bg=colour234] #W "
+
